refactor: Upgrade to java 17