@@ -3,10 +3,10 @@ package com.ronja.crm.ronjaserver.exception;
 public class EntityNotFoundException extends RuntimeException {
 
     public EntityNotFoundException(String type) {
-        super(String.format("%s neexistuje.", type));
+        super("%s neexistuje.".formatted(type));
     }
 
     public EntityNotFoundException(String type, String name) {
-        super(String.format("%s '%s' neexistuje.", type, name));
+        super("%s '%s' neexistuje.".formatted(type, name));
     }
 }
